--- a/app/assets/stylesheets/grayscale.css.scss
+++ b/app/assets/stylesheets/grayscale.css.scss
@@ -7,8 +7,8 @@ body {
   width: 100%;
   height: 100%;
   font-family: "Lora", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: white;
-  background-color: black;
+  color: black;
+  background-color: white;
 }
 html {
   width: 100%;
@@ -55,7 +55,7 @@ a:focus {
 .navbar-custom {
   margin-bottom: 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-  text-transform: uppercase;
+  // text-transform: uppercase;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: black;
 }
@@ -70,12 +70,13 @@ a:focus {
 }
 .navbar-custom .navbar-brand {
   font-weight: 700;
+  font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
 }
 .navbar-custom .navbar-brand:focus {
   outline: none;
 }
 .navbar-custom a {
-  color: white;
+  color: #fed136;
 }
 .navbar-custom .nav li a {
   -webkit-transition: background 0.3s ease-in-out;
@@ -124,7 +125,7 @@ a:focus {
   padding: 100px 0;
   text-align: center;
   color: white;
-  background: url(intro-bg.jpg) no-repeat bottom center scroll;
+  background: url(compsition_1_1_web.jpg) no-repeat bottom center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -147,7 +148,7 @@ a:focus {
     padding: 0;
   }
   .intro .intro-body .brand-heading {
-    font-size: 100px;
+    font-size: 60px;
   }
   .intro .intro-body .intro-text {
     font-size: 26px;
@@ -271,6 +272,12 @@ a:focus {
 }
 ul.banner-social-buttons {
   margin-top: 0;
+}
+ul.honey_list li {
+  display: block;
+  margin-bottom: 20px;
+  padding: 0;
+  font-size: 20px;
 }
 @media (max-width: 1199px) {
   ul.banner-social-buttons {
