--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -23,7 +24,8 @@
             Menu <i class="fa fa-bars"></i>
           </button>
           <a class="navbar-brand page-scroll" href="#page-top">
-            <i class="fa fa-play-circle"></i> <span class="light">Start</span> Bootstrap
+            <!-- <i class="fa fa-play-circle"></i>  -->
+            <span class="light">Honey</span> Bolbas
           </a>
         </div>
 
@@ -35,16 +37,16 @@
               <a href="#page-top"></a>
             </li>
             <li>
-              <a class="page-scroll" href="#about">About</a>
+              <a class="page-scroll" href="#about">ABOUT</a>
+            </li>
+<!--             <li>
+              <a class="page-scroll" href="#download">DOWNLOAD</a>
+            </li> -->
+            <li>
+              <a class="page-scroll" href="#portfolio">SORTEN</a>
             </li>
             <li>
-              <a class="page-scroll" href="#download">Download</a>
-            </li>
-            <li>
-              <a class="page-scroll" href="#portfolio">Portfolio</a>
-            </li>
-            <li>
-              <a class="page-scroll" href="#contact">Contact</a>
+              <a class="page-scroll" href="#contact">CONTACT</a>
             </li>
           </ul>
         </div>
@@ -58,7 +60,7 @@
     <!-- Footer -->
     <footer>
       <div class="container text-center">
-        <p>Copyright &copy; Your Website 2016</p>
+        <p>Copyright &copy; HoneyBolbas</p>
       </div>
     </footer>
   </body>
