--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,9 +4,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
-          <h1 class="brand-heading">Grayscale</h1>
-          <p class="intro-text">A free, responsive, one page Bootstrap theme.
-            <br>Created by Start Bootstrap.</p>
+          <h1 class="brand-heading">Willkommen</h1>
+          <p class="intro-text">Hochwertiger Honig direkt von ungarischen Produzenten</p>
             <a href="#about" class="btn btn-circle page-scroll">
               <i class="fa fa-angle-double-down animated"></i>
             </a>
@@ -20,16 +19,24 @@
   <section id="about" class="container content-section text-center">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
-        <h2>About Grayscale</h2>
-        <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-        <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-        <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+        <h2>About</h2>
+        <p>Wir verkaufen hochwertigen Honig direkt von ungarischen Produzenten in den folgenden Sorten:</p>
+        <ul class="honey_list">
+          <li>Akazienhonig</li>
+          <li>Lindenhonig</li>
+          <li>Rapshonig</li>
+          <li>Sonnenblumenhonig</li>
+          <li>Waldhonig</li>
+          <li>Blütenhonig</li>
+        </ul>
+        <p>Wahlweise in Kombination mit getrockneten Früchten und / oder Nüssen. <br>
+        Ansprechend verpackt, gerne gehen wir auch auf ihre besonderen Wünsche ein.</p>
       </div>
     </div>
   </section>
 
   <!-- Download Section -->
-  <section id="download" class="content-section text-center">
+<!--   <section id="download" class="content-section text-center">
     <div class="download-section">
       <div class="container">
         <div class="col-lg-8 col-lg-offset-2">
@@ -39,59 +46,73 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Portfolio Grid Section -->
   <section id="portfolio" class="bg-light-gray">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading">Portfolio</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h2 class="section-heading">Sorten</h2>
+          <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
         </div>
       </div>
       <div class="row">
         <div class="col-md-4 col-sm-6 portfolio-item">
           <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
             <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
+<!--               <div class="portfolio-hover-content">
                 <i class="fa fa-plus fa-3x"></i>
-              </div>
+              </div> -->
             </div>
-            <%= image_tag "portfolio/roundicons.png", class: "img-responsive" %>
+            <%= image_tag "honey/H_s_1.jpg", class: "img-responsive" %>
           </a>
-          <div class="portfolio-caption">
+<!--           <div class="portfolio-caption">
             <h4>Round Icons</h4>
             <p class="text-muted">Graphic Design</p>
-          </div>
+          </div> -->
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
           <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-            <div class="portfolio-hover">
+<!--             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fa fa-plus fa-3x"></i>
               </div>
-            </div>
-            <%= image_tag "portfolio/startup-framework.png", class: "img-responsive" %>
+            </div> -->
+            <%= image_tag "honey/H_s_2.jpg", class: "img-responsive" %>
           </a>
-          <div class="portfolio-caption">
+<!--           <div class="portfolio-caption">
             <h4>Startup Framework</h4>
             <p class="text-muted">Website Design</p>
-          </div>
+          </div> -->
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
           <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-            <div class="portfolio-hover">
+<!--             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fa fa-plus fa-3x"></i>
               </div>
-            </div>
-            <%= image_tag "portfolio/treehouse.png", class: "img-responsive" %>
+            </div> -->
+            <%= image_tag "honey/H_s_3.jpg", class: "img-responsive" %>
           </a>
-          <div class="portfolio-caption">
+<!--           <div class="portfolio-caption">
             <h4>Treehouse</h4>
             <p class="text-muted">Website Design</p>
-          </div>
+          </div> -->
+        </div>
+        <div class="col-md-4 col-sm-6 portfolio-item">
+          <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+ <!--            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+                <i class="fa fa-plus fa-3x"></i>
+              </div>
+            </div> -->
+            <%= image_tag "honey/H_s_4.jpg", class: "img-responsive" %>
+          </a>
+<!--           <div class="portfolio-caption">
+            <h4>Treehouse</h4>
+            <p class="text-muted">Website Design</p>
+          </div> -->
         </div>
       </div>
     </div>
@@ -101,11 +122,10 @@
   <section id="contact" class="container content-section text-center">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
-        <h2>Contact Start Bootstrap</h2>
-        <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-        <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
-        </p>
-        <ul class="list-inline banner-social-buttons">
+        <h2>Contact</h2>
+<!--         <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p> -->
+        <p><a href="">info@honeybolbas.cloud</a></p>
+        <!-- <ul class="list-inline banner-social-buttons">
           <li>
             <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
           </li>
@@ -115,7 +135,7 @@
           <li>
             <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
           </li>
-        </ul>
+        </ul> -->
       </div>
     </div>
   </section>
