Styling, and replacing duplicated image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
           </button>
           <a class="navbar-brand page-scroll" href="#page-top">
             <!-- <i class="fa fa-play-circle"></i>  -->
-            <span class="light">Honey</span> Bolbas
+            <span class="light">Honig</span> Bolbas
           </a>
         </div>
 
@@ -43,7 +43,7 @@
               <a class="page-scroll" href="#download">DOWNLOAD</a>
             </li> -->
             <li>
-              <a class="page-scroll" href="#portfolio">SORTEN</a>
+              <a class="page-scroll" href="#sorten">SORTEN</a>
             </li>
             <li>
               <a class="page-scroll" href="#contact">CONTACT</a>
