--- a/app/assets/stylesheets/grayscale.css.scss
+++ b/app/assets/stylesheets/grayscale.css.scss
@@ -3,6 +3,12 @@
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
+
+$color_a:         #fed136;
+$color_navbar_a:  #fed136;
+$color_bg:        #1c1411;
+$color_contact:   $color_a;
+
 body {
   width: 100%;
   height: 100%;
@@ -20,7 +26,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0 0 35px;
+  margin: 35px 0 35px;
   text-transform: uppercase;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 700;
@@ -39,7 +45,7 @@ p {
   }
 }
 a {
-  color: #42DCA3;
+  color: $color-a;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
@@ -76,7 +82,7 @@ a:focus {
   outline: none;
 }
 .navbar-custom a {
-  color: #fed136;
+  color: $color_navbar_a;
 }
 .navbar-custom .nav li a {
   -webkit-transition: background 0.3s ease-in-out;
@@ -221,32 +227,22 @@ a:focus {
 .content-section {
   padding-top: 100px;
 }
-.download-section {
+.contact-section {
   width: 100%;
-  padding: 50px 0;
-  color: white;
-  background: url(downloads-bg.jpg) no-repeat center center scroll;
-  background-color: black;
+  color: $color_contact;
+  // background: url(downloads-bg.jpg) no-repeat center center scroll;
+  background-color: $color_bg;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
+  line-height: 1.2;
+  margin-top: 35px;
 }
-#map {
-  width: 100%;
-  height: 200px;
-  margin-top: 100px;
-}
+
 @media (min-width: 767px) {
   .content-section {
-    padding-top: 250px;
-  }
-  .download-section {
-    padding: 100px 0;
-  }
-  #map {
-    height: 400px;
-    margin-top: 250px;
+    padding-top: 100px;
   }
 }
 .btn {
@@ -318,4 +314,8 @@ img::-moz-selection {
 }
 body {
   webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
+}
+.img-honey {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
