--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,133 +9,204 @@
             <a href="#about" class="btn btn-circle page-scroll">
               <i class="fa fa-angle-double-down animated"></i>
             </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
+
+<!-- About Section -->
+<section id="about" class="container content-section text-center">
+  <div class="row">
+    <div class="col-lg-8 col-lg-offset-2">
+      <h2>About</h2>
+      <p>Wir verkaufen hochwertigen Honig direkt von ungarischen Produzenten in den folgenden Sorten:</p>
+      <ul class="honey_list">
+        <li>Akazienhonig</li>
+        <li>Lindenhonig</li>
+        <li>Rapshonig</li>
+        <li>Sonnenblumenhonig</li>
+        <li>Waldhonig</li>
+        <li>Blütenhonig</li>
+      </ul>
+      <p>Wahlweise in Kombination mit getrockneten Früchten und / oder Nüssen. <br>
+      Ansprechend verpackt, gerne gehen wir auch auf ihre besonderen Wünsche ein.</p>
+    </div>
+  </div>
+</section>
+
+<!-- Download Section -->
+<!--   <section id="download" class="content-section text-center">
+  <div class="download-section">
+    <div class="container">
+      <div class="col-lg-8 col-lg-offset-2">
+        <h2>Download Grayscale</h2>
+        <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
+        <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+      </div>
+    </div>
+  </div>
+</section> -->
+
+<!-- Portfolio Grid Section -->
+<section id="sorten" class="bg-light-gray">
+  <div class="container content-section">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">Sorten</h2>
+        <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4 col-sm-6 portfolio-item">
+        <a href="#Honey_1" class="portfolio-link" data-toggle="modal">
+          <div class="portfolio-hover">
+<!--               <div class="portfolio-hover-content">
+              <i class="fa fa-plus fa-3x"></i>
+            </div> -->
+          </div>
+          <%= image_tag "honey/H_s_1.jpg", class: "img-responsive img-honey" %>
+        </a>
+<!--           <div class="portfolio-caption">
+          <h4>Round Icons</h4>
+          <p class="text-muted">Graphic Design</p>
+        </div> -->
+      </div>
+      <div class="col-md-4 col-sm-6 portfolio-item">
+        <a href="#Honey_2" class="portfolio-link" data-toggle="modal">
+<!--             <div class="portfolio-hover">
+            <div class="portfolio-hover-content">
+              <i class="fa fa-plus fa-3x"></i>
+            </div>
+          </div> -->
+          <%= image_tag "honey/H_s_2.jpg", class: "img-responsive img-honey" %>
+        </a>
+<!--           <div class="portfolio-caption">
+          <h4>Startup Framework</h4>
+          <p class="text-muted">Website Design</p>
+        </div> -->
+      </div>
+      <div class="col-md-4 col-sm-6 portfolio-item">
+        <a href="#Honey_3" class="portfolio-link" data-toggle="modal">
+<!--             <div class="portfolio-hover">
+            <div class="portfolio-hover-content">
+              <i class="fa fa-plus fa-3x"></i>
+            </div>
+          </div> -->
+          <%= image_tag "honey/H_s_3.jpg", class: "img-responsive img-honey" %>
+        </a>
+<!--           <div class="portfolio-caption">
+          <h4>Treehouse</h4>
+          <p class="text-muted">Website Design</p>
+        </div> -->
+      </div>
+      <div class="col-md-4 col-sm-6 portfolio-item">
+        <a href="#Honey_4" class="portfolio-link" data-toggle="modal">
+<!--            <div class="portfolio-hover">
+            <div class="portfolio-hover-content">
+              <i class="fa fa-plus fa-3x"></i>
+            </div>
+          </div> -->
+          <%= image_tag "honey/H_s_4.jpg", class: "img-responsive img-honey" %>
+        </a>
+<!--           <div class="portfolio-caption">
+          <h4>Treehouse</h4>
+          <p class="text-muted">Website Design</p>
+        </div> -->
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Contact Section -->
+<section id="contact" class="content-section text-center">
+  <div class="contact-section">
+    <div class="container">
+      <div class="col-lg-8 col-lg-offset-2">
+        <h2>Contact</h2>
+<!--    <p>Feel free to email us!</p> -->
+        <p>Honig Bolbas <br>
+        www.honeybolbas.cloud <br>
+        info@honeybolbas.cloud <br>
+        +36 30 307 1157</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+<div class="portfolio-modal modal fade" id="Honey_1" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="close-modal" data-dismiss="modal">
+        <div class="lr">
+          <div class="rl">
           </div>
         </div>
       </div>
-    </div>
-  </header>
-
-  <!-- About Section -->
-  <section id="about" class="container content-section text-center">
-    <div class="row">
-      <div class="col-lg-8 col-lg-offset-2">
-        <h2>About</h2>
-        <p>Wir verkaufen hochwertigen Honig direkt von ungarischen Produzenten in den folgenden Sorten:</p>
-        <ul class="honey_list">
-          <li>Akazienhonig</li>
-          <li>Lindenhonig</li>
-          <li>Rapshonig</li>
-          <li>Sonnenblumenhonig</li>
-          <li>Waldhonig</li>
-          <li>Blütenhonig</li>
-        </ul>
-        <p>Wahlweise in Kombination mit getrockneten Früchten und / oder Nüssen. <br>
-        Ansprechend verpackt, gerne gehen wir auch auf ihre besonderen Wünsche ein.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Download Section -->
-<!--   <section id="download" class="content-section text-center">
-    <div class="download-section">
       <div class="container">
-        <div class="col-lg-8 col-lg-offset-2">
-          <h2>Download Grayscale</h2>
-          <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-          <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+        <div class="modal-body">
+          <%= image_tag "honey/H_s_1.jpg", class: "img-responsive img-centered" %>
+          <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
         </div>
       </div>
     </div>
-  </section> -->
-
-  <!-- Portfolio Grid Section -->
-  <section id="portfolio" class="bg-light-gray">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading">Sorten</h2>
-          <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
+  </div>
+</div>
+<div class="portfolio-modal modal fade" id="Honey_2" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="close-modal" data-dismiss="modal">
+        <div class="lr">
+          <div class="rl">
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-            <div class="portfolio-hover">
-<!--               <div class="portfolio-hover-content">
-                <i class="fa fa-plus fa-3x"></i>
-              </div> -->
-            </div>
-            <%= image_tag "honey/H_s_1.jpg", class: "img-responsive" %>
-          </a>
-<!--           <div class="portfolio-caption">
-            <h4>Round Icons</h4>
-            <p class="text-muted">Graphic Design</p>
-          </div> -->
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-<!--             <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fa fa-plus fa-3x"></i>
-              </div>
-            </div> -->
-            <%= image_tag "honey/H_s_2.jpg", class: "img-responsive" %>
-          </a>
-<!--           <div class="portfolio-caption">
-            <h4>Startup Framework</h4>
-            <p class="text-muted">Website Design</p>
-          </div> -->
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-<!--             <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fa fa-plus fa-3x"></i>
-              </div>
-            </div> -->
-            <%= image_tag "honey/H_s_3.jpg", class: "img-responsive" %>
-          </a>
-<!--           <div class="portfolio-caption">
-            <h4>Treehouse</h4>
-            <p class="text-muted">Website Design</p>
-          </div> -->
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
- <!--            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fa fa-plus fa-3x"></i>
-              </div>
-            </div> -->
-            <%= image_tag "honey/H_s_4.jpg", class: "img-responsive" %>
-          </a>
-<!--           <div class="portfolio-caption">
-            <h4>Treehouse</h4>
-            <p class="text-muted">Website Design</p>
-          </div> -->
+      <div class="container">
+        <div class="modal-body">
+          <%= image_tag "honey/H_s_2.jpg", class: "img-responsive img-centered" %>
+          <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
         </div>
       </div>
     </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section id="contact" class="container content-section text-center">
-    <div class="row">
-      <div class="col-lg-8 col-lg-offset-2">
-        <h2>Contact</h2>
-<!--         <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p> -->
-        <p><a href="">info@honeybolbas.cloud</a></p>
-        <!-- <ul class="list-inline banner-social-buttons">
-          <li>
-            <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-          </li>
-          <li>
-            <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-          </li>
-          <li>
-            <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-          </li>
-        </ul> -->
+  </div>
+</div>
+<div class="portfolio-modal modal fade" id="Honey_3" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="close-modal" data-dismiss="modal">
+        <div class="lr">
+          <div class="rl">
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="modal-body">
+          <%= image_tag "honey/H_s_3.jpg", class: "img-responsive img-centered" %>
+          <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+        </div>
       </div>
     </div>
-  </section>
+  </div>
+</div>
+<div class="portfolio-modal modal fade" id="Honey_4" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="close-modal" data-dismiss="modal">
+        <div class="lr">
+          <div class="rl">
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="modal-body">
+          <%= image_tag "honey/H_s_4.jpg", class: "img-responsive img-centered" %>
+          <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
