--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Clicker+Script" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montez" rel="stylesheet">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -25,7 +28,7 @@
           </button>
           <a class="navbar-brand page-scroll" href="#page-top">
             <!-- <i class="fa fa-play-circle"></i>  -->
-            <span class="light">Honig</span> Bolbas
+            Honey Bolbas
           </a>
         </div>
 
@@ -37,16 +40,16 @@
               <a href="#page-top"></a>
             </li>
             <li>
-              <a class="page-scroll" href="#about">ABOUT</a>
+              <a class="page-scroll" href="#varieties">Sorten</a>
             </li>
 <!--             <li>
               <a class="page-scroll" href="#download">DOWNLOAD</a>
             </li> -->
             <li>
-              <a class="page-scroll" href="#sorten">SORTEN</a>
+              <a class="page-scroll" href="#gallery">Bilder</a>
             </li>
             <li>
-              <a class="page-scroll" href="#contact">CONTACT</a>
+              <a class="page-scroll" href="#contact">Kontakt</a>
             </li>
           </ul>
         </div>
