--- a/app/assets/stylesheets/grayscale.css.scss
+++ b/app/assets/stylesheets/grayscale.css.scss
@@ -9,10 +9,13 @@ $color_navbar_a:  #fed136;
 $color_bg:        #1c1411;
 $color_contact:   $color_a;
 
+$font_nav:        'Clicker Script', cursive;
+$font_text:       'Clicker Script', cursive;
+
 body {
   width: 100%;
   height: 100%;
-  font-family: "Lora", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: $font_text;
   color: black;
   background-color: white;
 }
@@ -27,8 +30,8 @@ h4,
 h5,
 h6 {
   margin: 35px 0 35px;
-  text-transform: uppercase;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  // text-transform: uppercase;
+  font-family: $font_text;
   font-weight: 700;
   letter-spacing: 1px;
 }
@@ -62,7 +65,7 @@ a:focus {
   margin-bottom: 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   // text-transform: uppercase;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: $font_nav;
   background-color: black;
 }
 .navbar-custom .navbar-toggle {
@@ -76,7 +79,7 @@ a:focus {
 }
 .navbar-custom .navbar-brand {
   font-weight: 700;
-  font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
+  font-family: $font_nav;
 }
 .navbar-custom .navbar-brand:focus {
   outline: none;
@@ -131,7 +134,7 @@ a:focus {
   padding: 100px 0;
   text-align: center;
   color: white;
-  background: asset-data-url("compsition_1_1_web.jpg") no-repeat bottom center scroll;
+  background: asset-data-url("bg/bg_1.jpg") no-repeat bottom center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -144,6 +147,7 @@ a:focus {
 }
 .intro .intro-body .brand-heading {
   font-size: 40px;
+  color: $color_navbar_a;
 }
 .intro .intro-body .intro-text {
   font-size: 18px;
