--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,9 +5,9 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <h1 class="brand-heading">Willkommen</h1>
-          <p class="intro-text">Hochwertiger Honig direkt von ungarischen Produzenten</p>
-            <a href="#about" class="btn btn-circle page-scroll">
-              <i class="fa fa-angle-double-down animated"></i>
+          <!-- <p class="intro-text">Hochwertiger Honig direkt von ungarischen Produzenten</p> -->
+<!--             <a href="#varieties" class="btn btn-circle page-scroll">
+              <i class="fa fa-angle-double-down animated"></i> -->
             </a>
         </div>
       </div>
@@ -16,10 +16,10 @@
 </header>
 
 <!-- About Section -->
-<section id="about" class="container content-section text-center">
+<section id="varieties" class="container content-section text-center">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2">
-      <h2>About</h2>
+      <h2>Sorten</h2>
       <p>Wir verkaufen hochwertigen Honig direkt von ungarischen Produzenten in den folgenden Sorten:</p>
       <ul class="honey_list">
         <li>Akazienhonig</li>
@@ -49,11 +49,11 @@
 </section> -->
 
 <!-- Portfolio Grid Section -->
-<section id="sorten" class="bg-light-gray">
+<section id="gallery" class="bg-light-gray">
   <div class="container content-section">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Sorten</h2>
+        <h2 class="section-heading">Bilder</h2>
         <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
       </div>
     </div>
@@ -123,7 +123,7 @@
   <div class="contact-section">
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
-        <h2>Contact</h2>
+        <h2>Kontakt</h2>
 <!--    <p>Feel free to email us!</p> -->
         <p>Honig Bolbas <br>
         www.honeybolbas.cloud <br>
