Replace image html with rails each loop

--- a/app/assets/stylesheets/grayscale.css.scss
+++ b/app/assets/stylesheets/grayscale.css.scss
@@ -11,6 +11,8 @@ $color_contact:   $color_a;
 
 $font_nav:        'Clicker Script', cursive;
 $font_text:       'Clicker Script', cursive;
+// font-family: 'Sacramento', cursive;
+// font-family: 'Montez', cursive;
 
 body {
   width: 100%;
