--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -35,18 +35,6 @@
   </div>
 </section>
 
-<!-- Download Section -->
-<!--   <section id="download" class="content-section text-center">
-  <div class="download-section">
-    <div class="container">
-      <div class="col-lg-8 col-lg-offset-2">
-        <h2>Download Grayscale</h2>
-        <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-        <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
-      </div>
-    </div>
-  </div>
-</section> -->
 
 <!-- Portfolio Grid Section -->
 <section id="gallery" class="bg-light-gray">
@@ -54,66 +42,14 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">Bilder</h2>
-        <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4 col-sm-6 portfolio-item">
-        <a href="#Honey_1" class="portfolio-link" data-toggle="modal">
-          <div class="portfolio-hover">
-<!--               <div class="portfolio-hover-content">
-              <i class="fa fa-plus fa-3x"></i>
-            </div> -->
-          </div>
-          <%= image_tag "honey/H_s_1.jpg", class: "img-responsive img-honey" %>
-        </a>
-<!--           <div class="portfolio-caption">
-          <h4>Round Icons</h4>
-          <p class="text-muted">Graphic Design</p>
-        </div> -->
-      </div>
-      <div class="col-md-4 col-sm-6 portfolio-item">
-        <a href="#Honey_2" class="portfolio-link" data-toggle="modal">
-<!--             <div class="portfolio-hover">
-            <div class="portfolio-hover-content">
-              <i class="fa fa-plus fa-3x"></i>
-            </div>
-          </div> -->
-          <%= image_tag "honey/H_s_2.jpg", class: "img-responsive img-honey" %>
-        </a>
-<!--           <div class="portfolio-caption">
-          <h4>Startup Framework</h4>
-          <p class="text-muted">Website Design</p>
-        </div> -->
-      </div>
-      <div class="col-md-4 col-sm-6 portfolio-item">
-        <a href="#Honey_3" class="portfolio-link" data-toggle="modal">
-<!--             <div class="portfolio-hover">
-            <div class="portfolio-hover-content">
-              <i class="fa fa-plus fa-3x"></i>
-            </div>
-          </div> -->
-          <%= image_tag "honey/H_s_3.jpg", class: "img-responsive img-honey" %>
-        </a>
-<!--           <div class="portfolio-caption">
-          <h4>Treehouse</h4>
-          <p class="text-muted">Website Design</p>
-        </div> -->
-      </div>
-      <div class="col-md-4 col-sm-6 portfolio-item">
-        <a href="#Honey_4" class="portfolio-link" data-toggle="modal">
-<!--            <div class="portfolio-hover">
-            <div class="portfolio-hover-content">
-              <i class="fa fa-plus fa-3x"></i>
-            </div>
-          </div> -->
-          <%= image_tag "honey/H_s_4.jpg", class: "img-responsive img-honey" %>
-        </a>
-<!--           <div class="portfolio-caption">
-          <h4>Treehouse</h4>
-          <p class="text-muted">Website Design</p>
-        </div> -->
-      </div>
+      <% (1..4).each do |i| %>
+        <div class="col-md-4 col-sm-6 portfolio-item">
+          <%= link_to image_tag("honey/H_s_#{i}.jpg", class: "img-responsive img-honey"), "#Honey_#{i}", class: "portfolio-link", data: { toggle: "modal" } %>
+        </div>
+      <% end %>
     </div>
   </div>
 </section>
@@ -135,78 +71,23 @@
 </section>
 
 
-
-
-
-<div class="portfolio-modal modal fade" id="Honey_1" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="close-modal" data-dismiss="modal">
-        <div class="lr">
-          <div class="rl">
+<% (1..4).each do |i| %>
+  <div class="portfolio-modal modal fade" id="Honey_<%= i %>" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+          <div class="lr">
+            <div class="rl">
+            </div>
           </div>
         </div>
-      </div>
-      <div class="container">
-        <div class="modal-body">
-          <%= image_tag "honey/H_s_1.jpg", class: "img-responsive img-centered" %>
-          <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+        <div class="container">
+          <div class="modal-body">
+            <%= image_tag "honey/H_s_#{i}.jpg", class: "img-responsive img-centered" %>
+            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-<div class="portfolio-modal modal fade" id="Honey_2" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="close-modal" data-dismiss="modal">
-        <div class="lr">
-          <div class="rl">
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="modal-body">
-          <%= image_tag "honey/H_s_2.jpg", class: "img-responsive img-centered" %>
-          <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="portfolio-modal modal fade" id="Honey_3" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="close-modal" data-dismiss="modal">
-        <div class="lr">
-          <div class="rl">
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="modal-body">
-          <%= image_tag "honey/H_s_3.jpg", class: "img-responsive img-centered" %>
-          <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="portfolio-modal modal fade" id="Honey_4" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="close-modal" data-dismiss="modal">
-        <div class="lr">
-          <div class="rl">
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="modal-body">
-          <%= image_tag "honey/H_s_4.jpg", class: "img-responsive img-centered" %>
-          <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<% end %>
