--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,16 +1,8 @@
-<!-- Intro Header -->
-<header class="intro">
-  <div class="intro-body">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <h1 class="brand-heading">Willkommen</h1>
-          <!-- <p class="intro-text">Hochwertiger Honig direkt von ungarischen Produzenten</p> -->
-<!--             <a href="#varieties" class="btn btn-circle page-scroll">
-              <i class="fa fa-angle-double-down animated"></i> -->
-            </a>
-        </div>
-      </div>
+<!-- Header -->
+<header>
+  <div class="container">
+    <div class="intro-text">
+      <div class="intro-heading">Willkommen</div>
     </div>
   </div>
 </header>
