Change scss for Contact section

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -45,7 +45,7 @@
                 <i class="fa fa-plus fa-3x"></i>
               </div>
             </div>
-            <%= image_tag "honey/H_s_1.jpg", class: "img-responsive img-honey" %>
+            <%= image_tag "honey/H_s_#{i}.jpg", class: "img-responsive img-honey" %>
           <% end %>
         </div>
       <% end %>
