--- a/app/assets/stylesheets/2_main.css.scss
+++ b/app/assets/stylesheets/2_main.css.scss
@@ -8,120 +8,144 @@
 @import "mixins";
 
 body {
-  width: 100%;
-  height: 100%;
-  font-family: $font_text;
-  color: black;
-  background-color: white;
+    width: 100%;
+    height: 100%;
+    font-family: $font_body;
+    color: black;
+    background-color: white;
 }
+
 html {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
+
 h1,
-h2,
+h2 {
+    font-size: 40px;
+    margin: 35px 0 35px;
+    font-family: $font_header;
+    font-weight: 700;
+    letter-spacing: 1px;
+}
 h3,
 h4,
 h5,
 h6 {
-  margin: 35px 0 35px;
-  // text-transform: uppercase;
-  font-family: $font_text;
-  font-weight: 700;
-  letter-spacing: 1px;
-}
-p {
-  margin: 0 0 25px;
-  font-size: 18px;
-  line-height: 1.5;
-}
-@media (min-width: 768px) {
-  p {
     margin: 0 0 35px;
-    font-size: 20px;
-    line-height: 1.6;
-  }
-}
-a {
-  color: $color-a;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-a:hover,
-a:focus {
-  text-decoration: none;
-  color: #1d9b6c;
-}
-.light {
-  font-weight: 400;
-}
-.navbar-custom {
-  margin-bottom: 0;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-  // text-transform: uppercase;
-  font-family: $font_nav;
-  background-color: black;
-}
-.navbar-custom .navbar-toggle {
-  color: white;
-  background-color: rgba(255, 255, 255, 0.2);
-  font-size: 12px;
-}
-.navbar-custom .navbar-toggle:focus,
-.navbar-custom .navbar-toggle:active {
-  outline: none;
-}
-.navbar-custom .navbar-brand {
-  font-weight: 700;
-  font-family: $font_nav;
-}
-.navbar-custom .navbar-brand:focus {
-  outline: none;
-}
-.navbar-custom a {
-  color: $color_navbar_a;
-}
-.navbar-custom .nav li a {
-  -webkit-transition: background 0.3s ease-in-out;
-  -moz-transition: background 0.3s ease-in-out;
-  transition: background 0.3s ease-in-out;
-}
-.navbar-custom .nav li a:hover {
-  color: rgba(255, 255, 255, 0.8);
-  outline: none;
-  background-color: transparent;
-}
-.navbar-custom .nav li a:focus,
-.navbar-custom .nav li a:active {
-  outline: none;
-  background-color: transparent;
-}
-.navbar-custom .nav li.active {
-  outline: none;
-}
-.navbar-custom .nav li.active a {
-  background-color: rgba(255, 255, 255, 0.3);
-}
-.navbar-custom .nav li.active a:hover {
-  color: white;
-}
-@media (min-width: 768px) {
-  .navbar-custom {
-    padding: 20px 0;
-    border-bottom: none;
+    // text-transform: uppercase;
+    font-family: $font_header;
+    font-weight: 700;
     letter-spacing: 1px;
-    background: transparent;
-    -webkit-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
-    -moz-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
-    transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
-  }
-  .navbar-custom.top-nav-collapse {
-    padding: 0;
-    background: black;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-  }
 }
+
+p {
+    margin: 0 0 25px;
+    font-size: 30px;
+    line-height: 1.5;
+    @media(min-width:768px) {
+        margin: 0 0 35px;
+        font-size: 30px;
+        line-height: 1.6;
+    }
+}
+
+a {
+    color: $color_a;
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+    &:hover,
+    &:focus {
+        text-decoration: none;
+        color: darken($color_a,20%);
+    }
+}
+
+.light {
+    font-weight: 400;
+}
+
+.navbar-custom {
+    margin-bottom: 0;
+    border-bottom: 1px solid rgba(white, 0.3);
+    // text-transform: uppercase;
+    font-size: 20px;
+    font-family: $font_nav;
+    background-color: black;
+    a {
+      color: darken($color_a,15%);
+    }
+  @include background-cover;
+    .navbar-toggle {
+        padding: 4px 6px;
+        font-size: 16px;
+        color: white;
+        &:focus,
+        &:active {
+            outline: none;
+        }
+    }
+    .navbar-brand {
+        font-size: 24px;
+        font-weight: 700;
+        &:focus {
+            outline: none;
+        }
+    }
+    .nav {
+        li {
+            a {
+                -webkit-transition: background .3s ease-in-out;
+                -moz-transition: background .3s ease-in-out;
+                transition: background .3s ease-in-out;
+                &:hover {
+                    color: rgba(white, 0.8);
+                    outline: none;
+                    background-color: transparent;
+                }
+                &:focus,
+                &:active {
+                    outline: none;
+                    background-color: transparent;
+                }
+            }
+            &.active {
+                outline: none;
+                a {
+                    background-color: rgba(white, 0.3);
+                    &:hover {
+                        color: white;
+                    }
+                }
+            }
+        }
+    }
+    @media(min-width:768px) {
+        padding: 20px 0;
+        border-bottom: none;
+        letter-spacing: 1px;
+        // background: rgba(black, 0.3);
+        background: transparent;
+        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        transition: background .5s ease-in-out,padding .5s ease-in-out;
+        &.top-nav-collapse {
+            padding: 0;
+            background: black;
+            // background-image: asset-data-url("bg/bg_2.jpg");
+            // background-attachment: scroll;
+            // background-position: center center;
+            border-bottom: 1px solid rgba(white, 0.3);
+                a {
+                    color: $color_a;
+                }
+        }
+    }
+}
+
+
+
 
 header {
   width: 100%;
@@ -164,91 +188,67 @@ header {
     }
 }
 
-.btn-circle {
-  width: 70px;
-  height: 70px;
-  margin-top: 15px;
-  padding: 7px 16px;
-  border: 2px solid white;
-  border-radius: 100% !important;
-  font-size: 40px;
-  color: white;
-  background: transparent;
-  -webkit-transition: background 0.3s ease-in-out;
-  -moz-transition: background 0.3s ease-in-out;
-  transition: background 0.3s ease-in-out;
-}
-.btn-circle:hover,
-.btn-circle:focus {
-  outline: none;
-  color: white;
-  background: rgba(255, 255, 255, 0.1);
-}
-.btn-circle i.animated {
-  -webkit-transition-property: -webkit-transform;
-  -webkit-transition-duration: 1s;
-  -moz-transition-property: -moz-transform;
-  -moz-transition-duration: 1s;
-}
-.btn-circle:hover i.animated {
-  -webkit-animation-name: pulse;
-  -moz-animation-name: pulse;
-  -webkit-animation-duration: 1.5s;
-  -moz-animation-duration: 1.5s;
-  -webkit-animation-iteration-count: infinite;
-  -moz-animation-iteration-count: infinite;
-  -webkit-animation-timing-function: linear;
-  -moz-animation-timing-function: linear;
-}
+
+
 @-webkit-keyframes pulse {
-  0% {
+  from {
     -webkit-transform: scale(1);
     transform: scale(1);
   }
+
   50% {
     -webkit-transform: scale(1.2);
     transform: scale(1.2);
   }
+
   100% {
     -webkit-transform: scale(1);
     transform: scale(1);
   }
 }
+
 @-moz-keyframes pulse {
-  0% {
+  from {
     -moz-transform: scale(1);
     transform: scale(1);
   }
+
   50% {
     -moz-transform: scale(1.2);
     transform: scale(1.2);
   }
+
   100% {
     -moz-transform: scale(1);
     transform: scale(1);
   }
 }
+
+
+
+
 .content-section {
   padding-top: 100px;
 }
-.contact-section {
-  width: 100%;
-  color: $color_contact;
-  // background: url(downloads-bg.jpg) no-repeat center center scroll;
-  background-color: $color_bg;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
-  line-height: 1.2;
-  margin-top: 35px;
-}
-
-@media (min-width: 767px) {
+@media(min-width:767px) {
   .content-section {
     padding-top: 100px;
   }
 }
+
+.contact-section {
+  width: 100%;
+  padding: 100px 0;
+  color: $color_contact;
+  background-image: asset-data-url("bg/bg_2.jpg");
+  background-attachment: scroll;
+  background-position: center center;  background-color: black;
+  @include background-cover;
+}
+
+
+
+
 .btn {
   text-transform: uppercase;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -270,6 +270,8 @@ header {
   color: black;
   background-color: #42DCA3;
 }
+
+
 ul.banner-social-buttons {
   margin-top: 0;
 }
@@ -294,30 +296,14 @@ ul.honey_list li {
     margin-bottom: 0;
   }
 }
-footer {
-  padding: 50px 0;
-}
-footer p {
-  margin: 0;
-}
-::-moz-selection {
-  text-shadow: none;
-  background: #fcfcfc;
-  background: rgba(255, 255, 255, 0.2);
-}
-::selection {
-  text-shadow: none;
-  background: #fcfcfc;
-  background: rgba(255, 255, 255, 0.2);
-}
+
+
+
 img::selection {
   background: transparent;
 }
 img::-moz-selection {
   background: transparent;
-}
-body {
-  webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
 }
 .img-honey {
   margin-top: 10px;
