--- a/app/assets/stylesheets/_variables.css.scss
+++ b/app/assets/stylesheets/_variables.css.scss
@@ -1,9 +1,10 @@
 $color_a:         #fed136;
 $color_navbar_a:  #fed136;
 $color_bg:        #1c1411;
-$color_contact:   $color_a;
+$color_contact:   black;
 
 $font_nav:        'Clicker Script', cursive;
-$font_text:       'Clicker Script', cursive;
+$font_header:     'Clicker Script', cursive;
+$font_body:       'Clicker Script', cursive;
 // font-family: 'Sacramento', cursive;
 // font-family: 'Montez', cursive;
