--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,10 +61,10 @@
     <%= yield %>
 
     <!-- Footer -->
-    <footer>
+<!--     <footer>
       <div class="container text-center">
         <p>Copyright &copy; HoneyBolbas</p>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
