--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,7 +8,7 @@
 </header>
 
 <!-- About Section -->
-<section id="varieties" class="container content-section text-center">
+<section id="varieties" class="container content-section contact-section text-center">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2">
       <h2>Sorten</h2>
