--- a/app/assets/stylesheets/_variables.css.scss
+++ b/app/assets/stylesheets/_variables.css.scss
@@ -1,7 +1,7 @@
 $color_a:         #fed136;
 $color_navbar_a:  #fed136;
 $color_bg:        #1c1411;
-$color_contact:   black;
+$color_contact:   rgb(56, 44, 5);
 
 $font_nav:        'Clicker Script', cursive;
 $font_header:     'Clicker Script', cursive;
