Add dictionaries for internalization

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,16 +40,13 @@
               <a href="#page-top"></a>
             </li>
             <li>
-              <a class="page-scroll" href="#varieties">Sorten</a>
-            </li>
-<!--             <li>
-              <a class="page-scroll" href="#download">DOWNLOAD</a>
-            </li> -->
-            <li>
-              <a class="page-scroll" href="#gallery">Bilder</a>
+              <a class="page-scroll" href="#varieties"><%= t('varieties') %></a>
             </li>
             <li>
-              <a class="page-scroll" href="#contact">Kontakt</a>
+              <a class="page-scroll" href="#gallery"><%= t('gallery') %></a>
+            </li>
+            <li>
+              <a class="page-scroll" href="#contact"><%= t('contact') %></a>
             </li>
           </ul>
         </div>
@@ -65,6 +62,12 @@
       <div class="container text-center">
         <p>Copyright &copy; HoneyBolbas</p>
       </div>
+    </footer> -->
+<!--     <footer>
+      <p><b>I18n.locale:</b>
+      <%= I18n.locale %>
+      </p>
+      <%= t('hello') %>
     </footer> -->
   </body>
 </html>
