--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,18 +11,17 @@
 <section id="varieties" class="container content-section contact-section text-center">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2">
-      <h2>Sorten</h2>
-      <p>Wir verkaufen hochwertigen Honig direkt von ungarischen Produzenten in den folgenden Sorten:</p>
+      <h2><%= t('varieties') %></h2>
+      <p><%= t('varieties_desc_1') %></p>
       <ul class="honey_list">
-        <li>Akazienhonig</li>
-        <li>Lindenhonig</li>
-        <li>Rapshonig</li>
-        <li>Sonnenblumenhonig</li>
-        <li>Waldhonig</li>
-        <li>Blütenhonig</li>
+        <li><%= t('honey_akac') %></li>
+        <li><%= t('honey_hars') %></li>
+        <li><%= t('honey_repce') %></li>
+        <li><%= t('honey_napraforgo') %></li>
+        <li><%= t('honey_erdei') %></li>
+        <li><%= t('honey_vegyesvirag') %></li>
       </ul>
-      <p>Wahlweise in Kombination mit getrockneten Früchten und / oder Nüssen. <br>
-      Ansprechend verpackt, gerne gehen wir auch auf ihre besonderen Wünsche ein.</p>
+      <p><%= t('varieties_desc_2') %></p>
     </div>
   </div>
 </section>
@@ -58,7 +57,7 @@
   <div class="contact-section">
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
-        <h2>Kontakt</h2>
+        <h2><%= t('contact') %></h2>
 <!--    <p>Feel free to email us!</p> -->
         <p>Honig Bolbas <br>
         www.honeybolbas.cloud <br>
