Add CarrierWave for image upload, and MiniMagick for resizing, add Honeyimg to honeys

--- a/app/views/honeys/_form.html.erb
+++ b/app/views/honeys/_form.html.erb
@@ -26,6 +26,11 @@
     <%= f.text_area :description_de %>
   </div>
 
+  <div class="field">
+    <%= f.label :honeyimg %>
+    <%= f.file_field :honeyimg %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
