Add text content for locales

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
           </button>
           <a class="navbar-brand page-scroll" href="#page-top">
             <!-- <i class="fa fa-play-circle"></i>  -->
-            Honey Bolbas
+            <%= t('title') %>
           </a>
         </div>
 
