--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -69,7 +69,7 @@
       <div class="col-lg-8 col-lg-offset-2">
         <h2><%= t('contact') %></h2>
 <!--    <p>Feel free to email us!</p> -->
-        <p>Honig Bolbas <br>
+        <p><%= t('title') %><br>
         www.honeybolbas.cloud <br>
         info@honeybolbas.cloud <br>
         +36 30 307 1157</p>
