--- a/app/views/main/tmp.html.erb
+++ b/app/views/main/tmp.html.erb
@@ -131,3 +131,10 @@
     <%= image_tag Honey.find(4).honeyimg.thumb.url, class: "img-responsive img-honey" %>
   <% end %>
 </div>
+
+
+<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Montez" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+
