Add Devise, style honey pages, fix overflow

--- a/app/assets/stylesheets/_variables.css.scss
+++ b/app/assets/stylesheets/_variables.css.scss
@@ -6,5 +6,4 @@ $color_contact:   rgb(56, 44, 5);
 $font_nav:        'Clicker Script', cursive;
 $font_header:     'Clicker Script', cursive;
 $font_body:       'Clicker Script', cursive;
-// font-family: 'Sacramento', cursive;
-// font-family: 'Montez', cursive;
+$font_admin:      'Montserrat', cursive;
