--- a/app/views/honeys/new.html.erb
+++ b/app/views/honeys/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Honey</h1>
+<h1 id="admin_title">Create a new Honey</h1>
 
-<%= render 'form', honey: @honey %>
+<div class="skinny_wrapper wrapper_padding">
+  <%= render 'form', honey: @honey %>
 
-<%= link_to 'Back', honeys_path %>
+  <%= link_to 'Back', honeys_path %>
+</div>
