List honeys in main#index, fix modal styling

--- a/app/assets/stylesheets/2_main.css.scss
+++ b/app/assets/stylesheets/2_main.css.scss
@@ -414,11 +414,11 @@ img::-moz-selection {
 }
 
 
-.gellery-modal {
+.gallery-modal {
   .modal-dialog{
-    margin: 0;
+    margin: 3% 10%;
     height: 100%;
-    width: auto;
+    width: 80%;
   }
   .modal-content {
     border-radius: 0;
