--- a/app/assets/stylesheets/honey.scss
+++ b/app/assets/stylesheets/honey.scss
@@ -7,11 +7,22 @@
   width: 80%;
   max-width: 760px;
   margin: 0 auto;
-  div, p, table {
+  div, p, table, a {
       margin: 0 0 25px;
-      font-size: 12px;
+      font-size: 14px;
       line-height: 1.5;
       font-family: $font_admin;
+  }
+  a {
+    color: darken($color_a,25%);
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+    &:hover,
+    &:focus {
+        text-decoration: none;
+        color: $color_a;
+    }
   }
   td, th {
     padding: 10px;
@@ -19,7 +30,7 @@
 }
 
 .wrapper_padding {
-  padding: 4rem 0;
+  padding: 2rem 0;
 }
 
 #admin_title {
