AddDescriptionHuToHoneys migration, views

--- a/app/views/honeys/_form.html.erb
+++ b/app/views/honeys/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :description_hu %>
+    <%= f.text_area :description_hu %>
+  </div>
+
+  <div class="field">
     <%= f.label :description_en %>
     <%= f.text_area :description_en %>
   </div>
