--- a/app/views/honeys/show.html.erb
+++ b/app/views/honeys/show.html.erb
@@ -7,6 +7,11 @@
   </p>
 
   <p>
+    <strong>Description hu:</strong>
+    <%= @honey.description_hu %>
+  </p>
+
+  <p>
     <strong>Description en:</strong>
     <%= @honey.description_en %>
   </p>
