Modify image responsiveness

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -37,7 +37,7 @@
     </div>
     <div class="row">
       <% @honeys.each do |honey| %>
-        <div class="col-md-4 col-sm-6 gallery-item">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6 gallery-item">
           <%= link_to "#Honey_#{honey.id}", class: "gallery-link", data: { toggle: "modal" } do %>
             <div class="gallery-hover">
               <div class="gallery-hover-content">
