Process and show images based on their orientation.

--- a/app/assets/stylesheets/2_main.css.scss
+++ b/app/assets/stylesheets/2_main.css.scss
@@ -364,7 +364,7 @@ img::-moz-selection {
     .gallery-link {
       display: block;
       position: relative;
-      max-width: 400px;
+      // max-width: 400px;
       margin: 0 auto;
       .gallery-hover {
         background: fade-out($color_a, .7);
