--- a/app/views/honeys/_form.html.erb
+++ b/app/views/honeys/_form.html.erb
@@ -36,6 +36,11 @@
     <%= f.file_field :honeyimg %>
   </div>
 
+  <div class="field">
+    <%= f.label :orientation_landscape %>
+    <%= f.check_box :orientation_landscape %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
