--- a/app/views/honeys/show.html.erb
+++ b/app/views/honeys/show.html.erb
@@ -1,5 +1,7 @@
+<br>
+<br>
 <div class="skinny_wrapper wrapper_padding">
-  <%= image_tag @honey.honeyimg.url %>
+  <%= image_tag @honey.honeyimg.small.url %>
 
   <p>
     <strong>Name:</strong>
