--- a/app/views/honeys/index.html.erb
+++ b/app/views/honeys/index.html.erb
@@ -1,13 +1,17 @@
-<h1>Honeys</h1>
+<br>
+<br>
 
 <div class="skinny_wrapper wrapper_padding">
+  <h1>Honeys</h1>
   <table>
     <thead>
       <tr>
+        <th>Image</th>
         <th>Name</th>
         <th>Description hu</th>
         <th>Description en</th>
         <th>Description de</th>
+        <th>Orientation Landscape</th>
         <th colspan="3"></th>
       </tr>
     </thead>
@@ -15,11 +19,12 @@
     <tbody>
       <% @honeys.each do |honey| %>
         <tr>
-          <td><%= image_tag honey.honeyimg.thumb.url, class: "img-responsive img-honey" %></td>
+          <td><%= image_tag honey.honeyimg.thumb.url %></td>
           <td><%= honey.name %></td>
           <td><%= honey.description_hu %></td>
           <td><%= honey.description_en %></td>
           <td><%= honey.description_de %></td>
+          <td><%= honey.orientation_landscape %></td>
           <td><%= link_to 'Show', honey %></td>
           <td><%= link_to 'Edit', edit_honey_path(honey) %></td>
           <td><%= link_to 'Delete', honey, method: :delete, data: { confirm: 'Are you sure?' } %></td>
