Add Honey description to view for each locale

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -89,13 +89,13 @@
       <div class="modal-content">
         <%= image_tag honey.honeyimg.small.url %>
         <p class="item-intro">
-<!--           <% if I18n.locale == :hu %>
+          <% if I18n.locale == :hu %>
             <%= honey.description_hu %>
           <% elsif I18n.locale == :de %>
             <%= honey.description_de %>
           <% else %>
             <%= honey.description_en %>
-          <% end %> -->
+          <% end %>
         </p>
       </div>
     </div>
