Add Producer_infor to locales, and selyemfu

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -20,6 +20,7 @@
         <li><%= t('honey_napraforgo') %></li>
         <li><%= t('honey_erdei') %></li>
         <li><%= t('honey_vegyesvirag') %></li>
+        <li><%= t('honey_selyemfu') %></li>
       </ul>
       <p><%= t('varieties_desc_2') %><br><%= t('varieties_desc_3') %></p>
     </div>
@@ -72,11 +73,15 @@
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2">
         <h2><%= t('contact') %></h2>
-<!--    <p>Feel free to email us!</p> -->
         <p><%= t('title') %><br>
         www.honeybolbas.cloud <br>
         info@honeybolbas.cloud <br>
+<!--         <%= mail_to "info@honeybolbas.cloud" %> <br>-->
         +36 30 307 1157</p>
+        <% if I18n.locale == :hu %>
+          <p><%= t('producer_info_1') %><br>
+          <%= t('producer_info_2') %></p>
+        <% end %>
       </div>
     </div>
   </div>
