Work on next honey link

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -101,7 +101,10 @@
           <% else %>
             <%= honey.description_en %>
           <% end %>
-        </p>
+<!--           <br>
+          <%= link_to 'Next honey', "#Honey_#{honey.next.ids.first}", class: "gallery-link", data: { dismiss: "modal", toggle: "modal" } %>
+ -->
+         </p>
       </div>
     </div>
   </div>
