--- a/app/assets/stylesheets/2_main.css.scss
+++ b/app/assets/stylesheets/2_main.css.scss
@@ -428,80 +428,42 @@ img::-moz-selection {
   }
 }
 
-
-.gallery-modal {
-  .modal-dialog{
-    margin: 1% 10%;
-    height: 60%;
-    width: 80%;
-  }
-  .modal-content {
-    border-radius: 0;
-    background-clip: border-box;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    border: none;
-    min-height: 100%;
-    padding: 20px 20px;
-    text-align: center;
-    h2 {
-      margin-bottom: 15px;
-      font-size: 3em;
-    }
-    p {
-      margin-bottom: 10px;
-    }
-    p.item-intro {
-      // margin: 20px 0 30px;
-      // @include serif-font;
-      // font-style: italic;
-      font-size: 30px;
-    }
-    ul.list-inline {
-      margin-bottom: 30px;
-      margin-top: 0;
-    }
-    img {
-      // margin-bottom: 30px;
-    }
-  }
-  .close-modal {
-    position: absolute;
-    width:75px;
-    height:75px;
-    background-color:transparent;
-    top: 25px;
-    right: 25px;
-    cursor: pointer;
-    &:hover {
-      opacity: 0.3;
-    }
-    .lr {
-      height:75px;
-      width:1px;
-      margin-left:35px;
-      background-color:$color_bg;
-      transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-      /* IE 9 */
-      -webkit-transform: rotate(45deg);
-      /* Safari and Chrome */
-      z-index:1051;
-      .rl {
-        height:75px;
-        width:1px;
-        background-color:$color_bg;
-        transform: rotate(90deg);
-        -ms-transform: rotate(90deg);
-        /* IE 9 */
-        -webkit-transform: rotate(90deg);
-        /* Safari and Chrome */
-        z-index:1052;
-      }
-    }
-  }
-  .modal-backdrop {
-    opacity: 0;
-    display: none;
-  }
+.lightboxOverlay {
+  background-color: #fed136;
+  opacity: 0.4;
 }
+
+.lb-dataContainer {
+    width: 100%;
+    padding-top: 20px;
+    // background-color: white;
+}
+
+.lb-data .lb-caption {
+  font-size: 30px;
+  font-weight: normal;
+  text-align: center;
+  color: black;
+  line-height: 1em;
+}
+
+.lb-data {
+  font-size: 30px;
+  font-weight: normal;
+  color: black;
+  line-height: 1em;
+}
+
+.lb-caption {
+  font-size: 30px;
+  font-weight: normal;
+  text-align: center;
+  color: black;
+  line-height: 1em;
+}
+
+.lb-data .lb-details {
+  text-align: center;
+}
+
+
