--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,8 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  *= require font-awesome
+ *= require lightbox
  *= require_tree .
  *= require_self
  */
-
-@import 'lightbox';
