--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -42,7 +42,7 @@
           <%= link_to honey.honeyimg.small.url, class: "gallery-link", data: { lightbox: "gallery", title: render(partial: "data_title", locals: {honey: honey}) } do %>
             <div class="gallery-hover">
               <div class="gallery-hover-content">
-                <i class="fa fa-plus fa-3x"></i>
+                <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>
             <%= image_tag honey.honeyimg.small.url, class: "img-responsive img-rounded img-honey" %>
@@ -56,7 +56,7 @@
           <%= link_to honey.honeyimg.small.url, class: "gallery-link", data: { lightbox: "gallery", title: render(partial: "data_title", locals: {honey: honey}) } do %>
             <div class="gallery-hover">
               <div class="gallery-hover-content">
-                <i class="fa fa-plus fa-3x"></i>
+                <i class="fa fa-search-plus fa-3x"></i>
               </div>
             </div>
             <%= image_tag honey.honeyimg.small.url, class: "img-responsive img-rounded img-honey" %>
